--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ title: Charles Thomas
 
 name: Charles Thomas
 
-description: Software Engineer
+description: Software Engineer currently trying to fix payroll at https://hyko.uk Also studying Maths & Philosophy at Durham (Formerly at Monzo)
