--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: Charles Thomas
 
 name: Charles Thomas
 
-description: Software Engineer currently trying to fix payroll at Hyko. Also studying Maths & Philosophy at Durham (Formerly at Monzo)
+description: Software Engineer currently trying to fix payroll at Onfolk. Also studying Maths & Philosophy at Durham - currently on a break (Formerly at Monzo & Lantum)
