--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
+google_analytics: G-QJKG79DQMG
+
 title: Charles Thomas
 
 name: Charles Thomas
