Revert "Add first draft of set theory post"

--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ title: Charles Thomas
 
 name: Charles Thomas
 
-description: Co-founder of Onfolk. Studying Maths & Philosophy at Durham. (Formerly at Monzo & Lantum)
+description: Software Engineer currently trying to fix payroll at Onfolk. Also studying Maths & Philosophy at Durham - currently on a break (Formerly at Monzo & Lantum)
