--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ title: Charles Thomas
 
 name: Charles Thomas
 
-description: Aspiring Physicist. Studying a Maths and Philosophy degree at Durham and trying to fix payroll at Onfolk. Previously building a better bank at Monzo.
+description: Aspiring Theoretical Physicist
